refactor: improve error handling and add unit tests